--- a/rtuen.html
+++ b/rtuen.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="lang-switcher">
-    <i><a href="file:///C:/Users/Juris/Desktop/RTU/3Kurss/webpage/rtu.html"><div class="flag-lv"></div></a></i>
+    <i><a href="rtu.html"><div class="flag-lv"></div></a></i>
       <a><div class="flag-en"></div></a>
       </div>
     
