--- a/rtu.html
+++ b/rtu.html
@@ -10,7 +10,7 @@
       
       <a><div class="flag-lv"></div></a>
       
-      <i><a href="rtu.html"><div class="flag-en"></div></a></i>
+      <i><a href="rtuen.html"><div class="flag-en"></div></a></i>
       </div>  
 <img width="250" height="250" src="logo.png"/>
 <br/>
