--- a/rtu.html
+++ b/rtu.html
@@ -1,5 +1,5 @@
 <html>
-  <head>
+<head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -12,11 +12,11 @@
       
       <i><a href="rtuen.html"><div class="flag-en"></div></a></i>
       </div>  
-<img width="250" height="250" src="logo.png"/>
+<img width="250" height="250" src="https://github.com/NoHanded/webpage/blob/main/logo.png?raw=true"/>
 <br/>
 
 <p>Lūdzu ievadiet kabineta nr :</p>
-tests 1
+
 <div class="dropper"> <!--krītošā izvēlne -->
   <div class="search-input">
     <a href="" target="_blank" hidden></a>
