--- a/1_stavs.html
+++ b/1_stavs.html
@@ -2,21 +2,21 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+  <style> 
+    .image{ 
+        margin: 30px;
+    } 
+    </style> 
+
 </head>
-<body>
-    <div class="lang-switcher">
-    <i><a href="rtu.html"><div class="flag-lv"></div></a></i>
-      <a><div class="flag-en"></div></a>
-      </div>
-    
-<img width="350" height="250" src="https://github.com/NoHanded/webpage/blob/main/logo_en.png?raw=true"/>
-<br/>
-<p>Please enter room no :</p>
+
+<body> 
 
 <div class="dropper"> <!--krītošā izvēlne -->
   <div class="search-input">
     <a href="" target="_blank" hidden></a>
-    <input type="text" placeholder="Lost??">
+    <input type="text" placeholder="Cits kabinets?">
     <div class="autocom-box">
       <!-- here list are inserted from javascript -->
     </div>
@@ -27,6 +27,11 @@
  <script src="js/saraksts.js"></script> 
  <script src="js/komandas.js"></script> 
 
-<p style="text-align: center;"><a href="#" class="btn primary">Search</a></p>
+ <p style="text-align: center;"><a href="#" class="btn primary">Meklēt</a></p>
+ <br>
+ <img class="image" width="350" height="350" src="C:\Users\Juris\Desktop\RTU\3Kurss\webpage\floor1.png"/>
+ <br>
+ <p style="text-align: center;"><a href="#" class="btn primary">Norādījumi</a></p>
+
 </body>
 </html>
