--- a/1_stavs.html
+++ b/1_stavs.html
@@ -29,7 +29,7 @@
 
  <p style="text-align: center;"><a href="#" class="btn primary">Meklēt</a></p>
  <br>
- <img class="image" width="350" height="350" src="C:\Users\Juris\Desktop\RTU\3Kurss\webpage\floor1.png"/>
+ <img class="image" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/floor1.png?raw=true"/>
  <br>
  <p style="text-align: center;"><a href="#" class="btn primary">Norādījumi</a></p>
 
