--- a/noradijumi.html
+++ b/noradijumi.html
@@ -25,7 +25,7 @@
         <label for="freeform">Stāvs "x"</label>
     </font> 
     <br>
-    <img class="image" width="40%" height="20%" src="C:\Users\Juris\Desktop\RTU\3Kurss\webpage\floor1.png"/>
+    <img class="image" width="40%" height="20%" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor1.png?raw=true"/>
     <br>
     <font size="7" COLOR=white> 
         <label for="freeform">Norādījumi:</label>
