--- a/4_stavs.html
+++ b/4_stavs.html
@@ -34,7 +34,7 @@
  </font> 
  <img class="image" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor4.png?raw=true"/>
  <br>
- <p style="text-align: center;"><a href="#" class="btn primary">Norādījumi</a></p>
+ <p style="text-align: center;"><a href="noradijumi.html" class="btn primary">Norādījumi</a></p>
 
 </body>
 </html>
