--- a/1_stavs.html
+++ b/1_stavs.html
@@ -2,17 +2,14 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-  <style> 
-    .image{ 
-        margin: 30px;
-    } 
-    </style> 
-
+  <title>1.stāvs</title>
 </head>
+
+ 
 
 <body> 
 
+    
 <div class="dropper"> <!--krītošā izvēlne -->
   <div class="search-input">
     <a href="" target="_blank" hidden></a>
@@ -27,14 +24,14 @@
  <script src="js/saraksts.js"></script> 
  <script src="js/komandas.js"></script> 
 
- <p style="text-align: center;"><a href="#" class="btn primary">Meklēt</a></p>
- <br>
+ <!--<p style="text-align: center;"><a href="#" class="btn primary">Meklēt</a></p>
+ <br>-->
  <font size="5" COLOR=white> 
     <label for="freeform">1.stāvs</label>
  </font> 
- <img class="image" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor1.png?raw=true"/>
+ <img style="margin:30px" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor1.png?raw=true"/>
  <br>
- <p style="text-align: center;"><a href="noradijumi.html" class="btn primary">Norādījumi</a></p>
+ <p style="text-align: center;"><a href="#" class="btn primary">Norādījumi</a></p>
 
 </body>
 </html>
