--- a/3_stavs.html
+++ b/3_stavs.html
@@ -2,12 +2,7 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-  <style> 
-    .image{ 
-        margin: 30px;
-    } 
-    </style> 
+  <title>3.stāvs</title>
 
 </head>
 
@@ -32,7 +27,7 @@
  <font size="5" COLOR=white> 
     <label for="freeform">3.stāvs</label>
  </font> 
- <img class="image" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor3.png?raw=true"/>
+ <img style="margin:30px" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor3.png?raw=true"/>
  <br>
  <p style="text-align: center;"><a href="noradijumi.html" class="btn primary">Norādījumi</a></p>
 
