--- a/noradijumi.html
+++ b/noradijumi.html
@@ -2,36 +2,20 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-  <style> 
-    .image{ 
-        margin: 30px;
-    } 
-    </style> 
-    
-    <style>
-        #autoresizing {
-            display: block;
-            overflow: hidden;
-            resize: none;
-      }
-    </style>
-
+  <title>Norādījumi</title>
 </head>
 
 <body>
     <br>
     <font size="7" COLOR=white> 
-        <label for="freeform">Stāvs "x"</label>
+        <label for="freeform">Galamērķis - x stāvs</label>
     </font> 
-    <br>
-    <img class="image" width="40%" height="20%" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor1.png?raw=true"/>
     <br>
     <font size="7" COLOR=white> 
         <label for="freeform">Norādījumi:</label>
     </font>
     <br>
-    <textarea id="freeform" name="freeform" rows="70" cols="150"> 
+    <textarea id="freeform" name="freeform" rows="60" cols="120"> 
     Norādījumi...
     </textarea>
 
