--- a/rtu.html
+++ b/rtu.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <title>RTU_klašu_meklēšana</title>
 </head>
 
 <body>
