--- a/rtuen.html
+++ b/rtuen.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <title>RTU_find_my_class</title>
 </head>
 <body>
     <div class="lang-switcher">
