--- a/6_stavs.html
+++ b/6_stavs.html
@@ -4,6 +4,15 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <title>6.stāvs</title>
   
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .responsive {
+      width: 100%;
+      max-width: 350px;
+      height: auto;
+    }
+  </style>
+  
 </head>
 
 <body> 
@@ -27,7 +36,7 @@
  <font size="5" COLOR=white> 
     <label for="freeform">6.stāvs</label>
  </font> 
- <img style="margin:30px" width="350" height="350" src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor6.png?raw=true"/>
+<img src="https://github.com/NoHanded/webpage/blob/main/Bildes/floor6.png?raw=true" alt="floor6" class="responsive" width="500" height="350">
  <br>
  <p style="text-align: center;"><a href="noradijumi.html" class="btn primary">Norādījumi</a></p>
 
