--- a/2_stavs.html
+++ b/2_stavs.html
@@ -25,6 +25,7 @@
       <!-- here list are inserted from javascript -->
     </div>
     <div class="icon"><i class="fas fa-search"></i></div>
+    <button class="btn"><i class="fa fa-home"></i></button>
   </div>
 </div>
 
