--- a/2_stavs.html
+++ b/2_stavs.html
@@ -2,6 +2,8 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <title>2.stāvs</title>
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +13,9 @@
       max-width: 350px;
       height: auto;
     }
-  </style>
+
+</style>
+
   
 </head>
 
@@ -25,7 +29,7 @@
       <!-- here list are inserted from javascript -->
     </div>
     <div class="icon"><i class="fas fa-search"></i></div>
-    <button class="btn"><i class="fa fa-home"></i></button>
+    
   </div>
 </div>
 
@@ -33,6 +37,8 @@
  <script src="js/komandas.js"></script> 
 
  <p style="text-align: center;"><a href="#" class="btn primary">Meklēt</a></p>
+ <br>
+ <button class="btn"><i class="fa fa-home"></i> Home</button>
  <br>
  <font size="5" COLOR=white> 
     <label for="freeform">2.stāvs</label>
