--- a/2_stavs.html
+++ b/2_stavs.html
@@ -2,7 +2,6 @@
 <head>
   <link rel="stylesheet" href="dizains.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>2.stāvs</title>
   
@@ -11,6 +10,7 @@
 </head>
 
 <body> 
+  <a href="rtu.html " style="text-decoration: none;" ><i text-decoration: none; class="fas fa-home" style="color: black;font-size:30px;"></i></a>
 
 <div class="dropper"> <!--krītošā izvēlne -->
   <div class="search-input">
@@ -28,9 +28,7 @@
  <script src="js/komandas.js"></script> 
 
  <p style="text-align: center;"><a href="#" class="btn primary">Meklēt</a></p>
- <br>
- <button class="btn"><i class="fa fa-home"></i> Home</button>
- <br>
+  <br>
  <font size="5" COLOR=white> 
     <label for="freeform">2.stāvs</label>
  </font> 
